# dmrserver

./: .env.example  .gitignore  Dockerfile  README.md  api_test_guide.md  manage.py  postman_collection.json  postman_environment.json  pyproject.toml  quick_api_test.py  requirements.in  run_api_tests.sh  run_login_tests.sh  start.sh
.github/workflows/: pr-checks.yml
authentication/: urls.py  views.py
core/: admin.py  authentication.py  cache.py  context.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_create_user_roles.py  0002_initial.py
dmr/: asgi.py  settings.py  urls.py  wsgi.py
docs/: API_GUIDE.md  CORS_CONFIGURATION.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_STANDARDS.md  DOCKER_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  TESTING_GUIDE.md
instructors/: serializers.py  tests.py  urls.py  views.py
patients/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
patients/migrations/: 0001_initial.py  0002_alter_file_options.py  0003_file_requires_pagination.py  0004_file_category.py  0005_add_mrn_ward_bed_fields.py  0006_patient_gender.py  0007_googleformlink.py  0008_remove_patient_email.py
patients/services/: __init__.py  pdf_pagination.py
student_groups/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
student_groups/migrations/: 0001_initial.py  0002_labrequest.py  0003_add_new_observation_models.py  (+11 more)
tests/: README.md  __init__.py  quick_login_test.py  test_approved_files_api.py  test_cache_data_isolation.py  test_cache_integration.py  test_config.py  test_file_integration.py  test_login_integration.py  test_login_manual.py  test_patient_filtering.py  test_permissions.py  test_utils.py
