[project]
name = "dmrserver"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "sqlalchemy>=2.0.42",
    "drf-nested-routers>=0.94.2",
    "gunicorn>=23.0.0",
    "pypdf2>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.12",
]
